座席確保、座席解放実装
