# ticketing/src/altair/app/ticketing/cart_api/views.py
@@ -3,8 +3,8 @@ import logging
 
 from pyramid.view import view_defaults, view_config
 from pyramid.httpexceptions import HTTPNotFound
-from sqlalchemy.orm.exc import NoResultFound
-from sqlalchemy import distinct
+from sqlalchemy.orm.exc import NoResultFound, MultipleResultsFound
+from sqlalchemy import distinct, func
 
 from altair.sqlahelper import get_db_session
 from altair.pyramid_dynamic_renderer import lbr_view_config
@@ -20,7 +20,14 @@ from altair.app.ticketing.core.models import (
     SalesSegment,
     StockStatus
 )
+from altair.app.ticketing.cart.models import (
+    Cart,
+    CartedProduct,
+    CartedProductItem
+)
 from altair.app.ticketing.cart.exceptions import OutTermSalesException
+from altair.app.ticketing.cart import api
+from altair.app.ticketing.models import DBSession
 
 logger = logging.getLogger(__name__)
 
@@ -193,28 +200,245 @@ class CartAPIView(object):
 
     @view_config(route_name='cart.api.seat_reserve')
     def seat_reserve(self):
-        return {
-            "results": {
-                "status": "OK",
-                "reserve_type": "seat_choise",
-                "stock_type_id": 6789,
-                "quantity": 2,
-                "is_quantity_only": False,
-                "is_separated": False,
-                "seats": ["s01-r001-01", "s01-r001-02"]
+        sales_segment = self.context.sales_segment
+        if not sales_segment.in_term(self.context.now):
+            logger.debug("out of term")
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "out of term"
+                }
             }
-        }
+
+        performance_id = int(self.request.matchdict.get('performance_id'))
+        sales_segment_id = int(self.request.matchdict.get('sales_segment_id'))
+        logger.debug("performance_id=%d, sales_segment_id=%d", performance_id, sales_segment_id)
+        
+        # 同一セッションでのカート生成を複数回させないため
+        api.remove_cart(self.request)
+
+        # リクエストボディのJSONからパラメータ取得
+        try:
+            json_data = self.request.json_body;
+            logger.debug("json_data %s", json_data)
+        except ValueError as e:
+            logger.warning("no json_data")
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "no json_data"
+                }
+            }
+        
+        reserve_type = json_data.get("reserve_type")
+        selected_seats = json_data.get("selected_seats")
+        auto_select_conditions = json_data.get("auto_select_conditions")
+        stock_type_id = auto_select_conditions.get("stock_type_id")
+        quantity = auto_select_conditions.get("quantity")
+        
+        # パラメータチェック
+        request_quantity = 0
+        reason = ""
+
+        if reserve_type != "auto" and reserve_type != "seat_choise":
+            reason = "invalid parameter reserve_type"
+
+        if reserve_type == "auto":
+            if stock_type_id is None:
+                reason = "invalid parameter stock_type_id"
+
+            if quantity is None:
+                reason = "invalid parameter quantity"
+            else:
+                request_quantity = int(quantity)
+        elif reserve_type == "seat_choise":
+            if selected_seats is None:
+                reason = "invalid parameter selected_seats"
+            else:
+                request_quantity = len(selected_seats)
+        else:
+            reason = "invalid parameter reserve_type"
+
+        if reason:
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": reason
+                }
+            }
+        
+        # TODO:座席確保の前に枚数制限チェックをする必要あり（ただし席種単位のしかできない）
+
+        stocker = api.get_stocker(self.request)
+        reserving = api.get_reserving(self.request)
+        cart_factory = api.get_cart_factory(self.request)
+
+        try:
+            product = DBSession.query(Product) \
+                        .filter(Product.performance_id == performance_id) \
+                        .filter(Product.sales_segment_id == sales_segment_id) \
+                        .filter(Product.seat_stock_type_id == stock_type_id) \
+                        .order_by(Product.id) \
+                        .first()
+        except NoResultFound as e:
+            logger.warning("no product stock_type_id=%d", stock_type_id)
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "no product"
+                }
+            }
+
+        product_requires = [(product, request_quantity)]
+        logger.debug("product_requires %s", product_requires)
+        stockstatuses = stocker.take_stock(performance_id, product_requires)
+
+        # TODO:autoの場合はseparate_seatsをどこからか取得して設定する必要あり
+        separate_seats = False
+        quantity_only = True
+        seats = []
+        if reserve_type == "auto":
+            for stockstatus, quantity in stockstatuses:
+                if stockstatus.stock.stock_type.quantity_only:
+                    logger.debug('stock %d quantity only', stockstatus.stock.id)
+                    continue
+                seats += reserving.reserve_seats(stockstatus.stock_id, quantity, separate_seats=separate_seats)
+                quantity_only = False
+        elif reserve_type == "seat_choise":
+            seats += reserving.reserve_selected_seats(stockstatuses, performance_id, selected_seats)
+            quantity_only = False
+        
+        seat_ids = [seat.id for seat in seats]
+        seat_l0_ids = [seat.l0_id for seat in seats]
+        logger.debug("seat_l0_ids %s", seat_l0_ids)
+
+        cart = cart_factory.create_cart(sales_segment, seats, product_requires)
+        if cart is None:
+            transaction.abort()
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "create cart error"
+                }
+            }
+
+        cart.sales_segment = sales_segment
+        DBSession.add(cart)
+        DBSession.flush()
+        api.set_cart(self.request, cart)
+        logger.debug("cart_id %s", cart.id)
+
+        if quantity_only:
+            return dict(
+                results = dict(
+                    status = "OK",
+                    reserve_type = reserve_type,
+                    stock_type_id = stock_type_id,
+                    quantity = request_quantity,
+                    is_quantity_only = quantity_only,
+                    is_separated = False,
+                )
+            )
+        else:
+            # 席種の混在をチェック
+            try:
+                stock_type_ids = DBSession.query(StockType.id) \
+                            .join(Stock, Seat) \
+                            .filter(Seat.id.in_(seat_ids)) \
+                            .group_by(StockType.id) \
+                            .one()
+            except MultipleResultsFound as e:
+                logger.warning("stock types are mixed %s", stock_type_ids)
+                transaction.abort()
+                return {
+                    "results": {
+                        "status": "NG",
+                        "reason": "stock types are mixed"
+                    }
+                }
+
+            return dict(
+                results = dict(
+                    status = "OK",
+                    reserve_type = reserve_type,
+                    stock_type_id = stock_type_ids[0],
+                    quantity = len(seat_l0_ids),
+                    is_quantity_only = quantity_only,
+                    is_separated = False,
+                    seats = seat_l0_ids
+                )
+            )
 
 
     @view_config(route_name='cart.api.seat_release')
     def seat_release(self):
+        cart = api.get_cart(self.request, False)
+        logger.debug("cart_id %s", cart.id)
+
+        if cart is None or cart.finished_at is not None:
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "cart does not exist"
+                }
+            }
+
+        try:
+            carted_products = DBSession.query(CartedProduct) \
+                                .filter(CartedProduct.cart_id == cart.id) \
+                                .all()
+        except NoResultFound as e:
+            logger.warning("no CartedProduct cart_id=%d", cart.id)
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "no CartedProduct"
+                }
+            }
+
+        quantity = sum(carted_product.quantity for carted_product in carted_products)
+        product_ids = [carted_product.product_id for carted_product in carted_products]
+        carted_product_ids = [carted_product.id for carted_product in carted_products]
+
+        try:
+            stock_type = DBSession.query(StockType) \
+                                .join(Product) \
+                                .filter(Product.id.in_(product_ids)) \
+                                .first()
+        except NoResultFound as e:
+            logger.warning("no StockType product_id=%s", product_ids)
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "no StockType"
+                }
+            }
+
+        try:
+            carted_product_items = DBSession.query(CartedProductItem) \
+                                .filter(CartedProductItem.carted_product_id.in_(carted_product_ids)) \
+                                .all()
+        except NoResultFound as e:
+            logger.warning("no CartedProductItem carted_product_id=%s", carted_product_ids)
+            return {
+                "results": {
+                    "status": "NG",
+                    "reason": "no CartedProductItem"
+                }
+            }
+
+        seats = []
+        for carted_product_item in carted_product_items:
+            seats += carted_product_item.seats
+
+        api.remove_cart(self.request)
         return {
             "results": {
                 "status": "OK",
-                "stock_type_id": 6789,
-                "quantity": 2,
-                "is_quantity_only": False,
-                "seats": ["s01-r001-01", "s01-r001-02"]
+                "stock_type_id": int(stock_type.id),
+                "quantity": quantity,
+                "is_quantity_only": stock_type.quantity_only,
+                "seats": [seat.l0_id for seat in seats]
             }
         }
 
